new class error

--- a/src/styles/tip-calculator.css
+++ b/src/styles/tip-calculator.css
@@ -61,6 +61,12 @@ body {
     color: var(--text-color-muted);
 }
 
+.error {
+    color: red;
+    font-size: 0.8rem;
+    margin-top: 0.2rem;
+}
+
 .calculator input {
     font-family: "SpaceMono";
     font-weight: 700;
